--- a/styles/base.css
+++ b/styles/base.css
@@ -64,6 +64,7 @@ main{
     border-radius: 10px;
     margin: 50px;
 }
+
 .card p{
     color: #283618;
 }
@@ -80,9 +81,12 @@ h2{
     font-family: Oswald;
 }
 ul{
-    grid-column: 1;
+    grid-column: 1/3;
     text-align: initial;
     list-style-type: none;
+}
+li{
+    padding-top: 9px;
 }
 
 .card a{
