--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,8 @@
-@media screen and (max-width:500px){
-    nav a{
+@media screen and (max-width:1600px){
+    .link{
         display: grid;
         grid-template-columns: repeat(5,1fr);
+        grid-column: 1/5;
         
     }
 }
