--- a/styles/larger.css
+++ b/styles/larger.css
@@ -5,4 +5,13 @@
         grid-column: 1/5;
         
     }
+    main{
+        max-width: 1600px;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+    }
+    h2{
+        grid-column: 1/3;
+    }
+
 }
