--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,8 +1,8 @@
-@media screen and (max-width:500px){
+@media screen and (max-width:1500px){
     .link{
-        display: grid;
-        grid-template-columns: repeat(5,1fr);
-        grid-column: 1/5;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
         
     }
     main{
