--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,4 @@
-@media screen and (max-width:2000px){
+@media screen and (max-width:1500px){
     .link{
         display: flex;
         flex-direction: row;
@@ -14,4 +14,120 @@
         grid-column: 1/3;
     }
 
+}
+
+@media screen and (max-width:600px){
+    body{
+        background-color: #606C38;
+    }
+    header {
+        background-color: #283618;
+        display: grid;
+        grid-template-columns: 1fr 1fr
+    }
+    
+    img{
+        justify-self: end;
+        padding: 2rem;
+        width: 80px;
+        
+    }
+    
+    h1{
+        align-self: center;
+        color: #FEFAE0;;
+        font-family: Oswald;
+    }
+    
+    nav{
+        background-color:#DDA15E;
+        color: #FEFAE0;
+        align-items: center;
+    }
+    
+    .link{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        text-decoration: none;
+    }
+    
+    nav a{
+        color: #000;
+        text-decoration: none;
+        font-size: 200%;
+        font-family: "Cormorant Garamond";
+    }
+    
+    main{
+        max-width: 700px;
+        margin: auto;
+        text-align: center;
+        font-family: "Cormorant Garamond";
+    }
+    
+    .card{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        grid-template-rows: repeat(3,100px);
+        background-image: linear-gradient(to bottom, #283618 30%, transparent 30%),linear-gradient(to top, #FEFAE0 60%, transparent 600%);
+        color: white;
+        font-size: x-large;
+        border: groove #000;
+        border-radius: 10px;
+        margin: 50px;
+    }
+    
+    .card p{
+        color: #283618;
+    }
+    
+    h3{
+        grid-column: 2;
+        align-self: end;
+        font-family: Oswald;
+    
+    }
+    h2{
+        text-decoration-line: underline;
+        color: #FEFAE0;
+        font-family: Oswald;
+    }
+    ul{
+        grid-column: 1/3;
+        text-align: initial;
+        list-style-type: none;
+    }
+    li{
+        padding-top: 9px;
+    }
+    
+    .card a{
+        color: #283618;
+        text-decoration: none;
+        font-family: "Cormorant Garamond";
+    }
+    
+    .placeholders{
+        color: #000;
+        text-align: center;
+        grid-column: 2;
+        grid-row: 2;
+    }
+    
+    footer{
+        background-color: #DDA15E;
+        color: #000;
+        text-align: center;
+        font-family: oswald;
+    }
+    footer p {
+        margin: 0; 
+    }
+    
+    footer img {
+        vertical-align: middle; 
+        padding: 5px;
+    }
+    
 }
