--- a/lesson2/styles/base.css
+++ b/lesson2/styles/base.css
@@ -1,3 +1,6 @@
+html,body{
+    height: 100%;
+}
 header{
     background-color: darkblue;
     color: white;
@@ -12,6 +15,7 @@ main{
     grid-template-columns: (repeat(3,1fr));
     grid-template-rows: 1fr 1fr;
     grid-gap: 30px;
+    height: 100%;
     margin: auto;
 }
 .card h2{
