--- a/lesson2/styles/base.css
+++ b/lesson2/styles/base.css
@@ -1,103 +1,140 @@
+
 html,body{
+    
     height: 100%;
+    text-align: -webkit-center;
+    
 }
 header{
     background-color: darkblue;
     color: white;
     text-align: center;
+    font-size: 40px;
 }
 header p{
-    font-size: 1.5rem;
+    font-size: 55px;
 }
 main{
-    max-width: 1000px;
+    max-width: 2500px;
     display: grid;
-    grid-template-columns: (repeat(3,1fr));
-    grid-template-rows: 1fr 1fr;
-    grid-gap: 30px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr);
+    column-gap: 30px;
+    justify-items: center;
     height: 100%;
-    margin: auto;
-}
-.card h2{
-    background-color: darkblue;
-    color: white;
-    font-size: xx-large;
-    text-align: center;
-    margin: initial;
-    border-top-right-radius: .5rem;
-    border-top-left-radius: .5rem;
+    padding-bottom: 30px;
 }
 .card{
     border: groove #000;
-    border-radius:1rem ;
     grid-column: 1/2;
-    grid-row: 1/3;
+    grid-row: 1/6;
+    width: -webkit-fill-available;
+    max-width: 100%;
+}
+.card h2{
+    text-align: center;
+    background-color: darkblue;
+    color: white;
+    margin: initial;
+    font-size: 70px;
+}
+.card h3{
+    font-size: 70px;
+    text-align: left;
+    margin: auto;
+    grid-row: 2;
+}
+.card a{
+    font-size: 55px;
+    text-align: left;
+    display: flex;
 }
 .card img{
-    max-width: 300px;
-    display: flex;
-    margin: auto;
-    padding: 2px;
+    height: 40%;
+    width: 100%;
 }
 .card p{
-    grid-row: 1/3;
+    font-size: 40px;
 }
 
-/*card2 starts here*/
+/*card two begins*/
 
 .card2{
     border: groove #000;
-    border-radius:1rem ;
     grid-column: 2/3;
-    grid-row: 1/3;
+    grid-row: 1/6;
+    width: -webkit-fill-available;
 }
 .card2 h2{
+    text-align: center;
     background-color: darkblue;
     color: white;
-    text-align: center;
     margin: initial;
-    border-top-right-radius: .5rem;
-    border-top-left-radius: .5rem;
+    font-size: 70px;
+}
+.card2 h3{
+    font-size: 70px;
+    text-align: left;
+    margin: auto;
+    grid-row: 2;
+}
+.card2 a{
+    font-size: 55px;
+    text-align: left;
+    display: flex;
 }
 .card2 img{
-    max-width: 300px;
-    display: flex;
-    margin: auto;
-    padding: 2px;
+    height: 40%;
+    width: 100%;
 }
 .card2 p{
-    grid-row: 1/3;
+    font-size: 40px;
 }
 
-/* card 3 starting*/
+/*card3 starts here*/
 
 .card3{
     border: groove #000;
-    border-radius:1rem ;
-    grid-column: 3/3;
-    grid-row: 1/3;
+    grid-column: 3/4;
+    grid-row: 1/6;
+    width: -webkit-fill-available;
 }
 .card3 h2{
+    text-align: center;
     background-color: darkblue;
     color: white;
-    text-align: center;
     margin: initial;
-    border-top-right-radius: .5rem;
-    border-top-left-radius: .5rem;
+    font-size: 70px;
+}
+.card3 h3{
+    font-size: 70px;
+    text-align: left;
+    margin: auto;
+    grid-row: 2;
+}
+.card3 a{
+    font-size: 55px;
+    text-align: left;
+    display: flex;
 }
 .card3 img{
-    max-height: fit-content;
-    max-width: 300px;
-    display: flex;
-    margin: auto;
-    padding: 2px;
-
+    height: 40%;
+    width: 100%;
+}
+.card3 p{
+    font-size: 49px;
 }
 footer{
-    background-color:darkblue;
+    background-color: darkblue;
     color: white;
-    font-size: xx-large;
-    text-align: center;
+    font-size: 40px;
+    
+}
+footer p {
+    margin: 0; 
 }
 
-
+footer img {
+    vertical-align: middle; 
+    padding: 5px;
+}
