--- a/lesson2/styles/larger.css
+++ b/lesson2/styles/larger.css
@@ -1,9 +1,34 @@
-@media screen and (max-width: 650px){
-    main{
-        display: flex;
-        flex-direction: column;
+@media only screen and (max-width:1100px){
+    #cards{
+        row-gap: 30px;
     }
-    footer{
-        margin-top: auto;
+    
+    .card3{
+        grid-column: 3/11;
+        grid-row: 6/13;
+    }
+    .card{
+        grid-column: 3/7;
+        grid-row: 1/6;
+    }
+    .card2{
+        grid-column: 7/11;
+        grid-row: 1/6;
+    }
+}
+
+@media only screen and (max-width:650px){
+    
+    .card{
+        grid-column: 1/13;
+        grid-row: 1/5;
+    }
+    .card2{
+        grid-column: 1/13;
+        grid-row: 5/9;
+    }
+    .card3{
+        grid-column: 1/13;
+        grid-row: 9/13;
     }
 }
