--- a/styles/base.css
+++ b/styles/base.css
@@ -47,6 +47,7 @@ nav a{
 main{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(12,auto) ;
     max-width: 1000px;
     margin: auto;
     text-align: center;
