--- a/styles/base.css
+++ b/styles/base.css
@@ -47,7 +47,6 @@ nav a{
 main{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(12,auto) ;
     max-width: 1000px;
     margin: auto;
     text-align: center;
@@ -57,7 +56,7 @@ main{
 .card{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,100px);
+    grid-template-rows: repeat(3,auto);
     background-image: linear-gradient(to bottom, #283618 30%, transparent 30%),linear-gradient(to top, #FEFAE0 60%, transparent 600%);
     color: white;
     font-size: x-large;
@@ -72,7 +71,7 @@ main{
 
 h3{
     grid-column: 2;
-    align-self: end;
+    align-self: center;
     font-family: Oswald;
 
 }
@@ -88,7 +87,7 @@ ul{
     list-style-type: none;
 }
 li{
-    padding-top: 9px;
+    padding-top: 30px;
 }
 
 .card a{
