--- a/styles/base.css
+++ b/styles/base.css
@@ -85,6 +85,7 @@ ul{
     grid-column: 1/3;
     text-align: initial;
     list-style-type: none;
+    counter-reset: my-counter;
 }
 li{
     padding-top: 30px;
@@ -116,5 +117,11 @@ footer p {
 footer img {
     vertical-align: middle; 
     padding: 5px;
+}
+li::before{
+    content: counter(my-counter, decimal-leading-zero) ":"; 
+    counter-increment: my-counter;
+    margin-right: 0.5em; 
+    color: black;
 }
 
