--- a/styles/base.css
+++ b/styles/base.css
@@ -57,7 +57,7 @@ main{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,auto);
-    background-image: linear-gradient(to bottom, #283618 30%, transparent 30%),linear-gradient(to top, #FEFAE0 60%, transparent 600%);
+    background-image: linear-gradient(to bottom, #283618 20%, transparent 20%),linear-gradient(to top, #FEFAE0 60%, transparent 600%);
     color: white;
     font-size: x-large;
     border: groove #000;
@@ -74,6 +74,9 @@ h3{
     align-self: center;
     font-family: Oswald;
 
+}
+.info{
+    margin-top: -30px;
 }
 h2{
     text-decoration-line: underline;
