--- a/styles/base.css
+++ b/styles/base.css
@@ -56,8 +56,7 @@ main{
 .card{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3,auto);
-    background-image: linear-gradient(to bottom, #283618 20%, transparent 20%),linear-gradient(to top, #FEFAE0 60%, transparent 600%);
+    grid-template-rows: 80px auto auto;
     color: white;
     font-size: x-large;
     border: groove #000;
@@ -67,16 +66,22 @@ main{
 
 .card p{
     color: #283618;
+    grid-column: 1/4;
+    background-color: #FEFAE0;
+    margin: initial;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 h3{
-    grid-column: 2;
+    background-color: #283618;
+    grid-column: 1/4;
     align-self: center;
     font-family: Oswald;
-
-}
-.info{
-    margin-top: -30px;
+    margin: auto;
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
+    padding-top: 20px;
 }
 h2{
     text-decoration-line: underline;
@@ -85,10 +90,13 @@ h2{
     grid-column: 1/3;
 }
 ul{
-    grid-column: 1/3;
+    grid-column: 1/4;
     text-align: initial;
     list-style-type: none;
     counter-reset: my-counter;
+    background-color: #FEFAE0;
+    margin: initial;
+    padding-bottom: 30px;
 }
 li{
     padding-top: 30px;
@@ -99,14 +107,6 @@ li{
     text-decoration: none;
     font-family: "Cormorant Garamond";
 }
-
-.placeholders{
-    color: #000;
-    text-align: center;
-    grid-column: 2;
-    grid-row: 2;
-}
-
 footer{
     background-color: #DDA15E;
     color: #000;
