--- a/Chamber/styles/base.css
+++ b/Chamber/styles/base.css
@@ -6,8 +6,8 @@ header{
     color: #D3D3D3 ;
     display: flex;
     align-items: center;
-    padding: 10px;
-    padding-right: 40px;
+    /* padding: 10px;
+    padding-right: 40px; */
 }
 header img{
 max-width: 100px;
