--- a/Chamber/styles/medium.css
+++ b/Chamber/styles/medium.css
@@ -64,6 +64,7 @@
 
         header a {
             font-size: 8px;
+            padding: 5px;
         }
         header img{
             max-width: 30px;
