--- a/Chamber/styles/base.css
+++ b/Chamber/styles/base.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=EB+Garamond&display=swap');
 body{
     background-color: #F5F3F4;
 }
@@ -6,18 +7,18 @@ header{
     color: #D3D3D3 ;
     display: flex;
     align-items: center;
-    padding: 10px;
-    padding-right: 40px;
 
 }
 header img{
 max-width: 100px;
+padding: 10px;
 }
 header h1{
     padding-left: 10px;
+    font-family: 'Bebas Neue';
 }
 header nav{
-    margin-left: auto;
+    margin-left: 80px;
     font-size: x-large;
 }
 header a{
@@ -28,6 +29,7 @@ header a{
     font-size: auto;
     border: 0px solid;
     border-radius: 10px;
+    font-family: 'EB Garamond';
 }
 header a:hover{
     background-color: #000;
@@ -35,7 +37,8 @@ header a:hover{
 main{
     display: grid;
     grid-template-columns: repeat(12,1fr);
-    grid-template-rows: repeat(12,auto);
+    grid-template-rows: 1fr 80px 1fr 1fr 20px;
+    grid-gap: 30px;
 }
 main img{
     grid-column: 1/13;
@@ -44,6 +47,119 @@ main img{
     
 }
 .cards{
-    grid-column: 1/6;
-    grid-row: 2/3;
+    background-color: #D3D3D3;
+    grid-column: 1/7;
+    grid-row: 2/4;
+    border: 3px solid #000;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 80px 1fr 1fr;
+}
+
+.cards h1{
+    text-align: center;
+    background-color: #660708;
+    color: #D3D3D3;
+    margin: 0px;
+    padding-top: 20px;
+    font-family: 'Bebas Neue' ;
+}
+.card1{
+    grid-row: 2/4;
+    grid-column: 7/13;
+    border: 3px solid #000;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 80px 1fr 1fr;
+    background-color: #D3D3D3;
+}
+.card1 h1{
+    text-align: center;
+    background-color: #660708;
+    color: #D3D3D3;;
+    margin: 0px;
+    padding-top: 20px;
+    font-family: 'Bebas Neue';
+}
+.signs{
+    grid-row: 4/5;
+    grid-column: 1/5;
+    border: 3px solid #000;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 80px auto auto;
+    background-color: #D3D3D3;
+}
+.signs h1{
+    background-color: #660708;
+    color: #D3D3D3;
+    margin: 0px;
+    text-align: center;
+    padding-top: 20px;
+    font-family: 'Bebas Neue';
+}
+.signs p{
+    color: #000;
+    text-align: center;
+    margin: 20px;
+    font-size: larger;
+    font-family: 'EB Garamond';
+}
+.roofing{
+    grid-column: 5/9;
+    grid-row: 4/5;
+    border: 3px solid #000;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 80px auto auto;
+    background-color: #D3D3D3;
+}
+.roofing h1{
+    background-color: #660708;
+    color: #D3D3D3;
+    margin: 0px;
+    text-align: center;
+    padding-top: 20px;
+    font-family: 'Bebas Neue';
+}
+.roofing p{
+    text-align: center;
+    color: #000;
+    margin: 20px;
+    font-size: larger;
+    font-family: 'EB Garamond';
+}
+.land{
+    grid-column: 9/13;
+    grid-row: 4/5;
+    border: 3px solid #000;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 80px auto auto;
+    background-color: #D3D3D3;
+}
+.land h1{
+    background-color: #660708;
+    color: #D3D3D3;
+    margin: 0px;
+    text-align: center;
+    padding-top: 20px;
+    font-family: 'Bebas Neue';
+}
+.land p{
+    text-align: center;
+    color: #000;
+    margin: 20px;
+    font-size: larger;
+    font-family: 'EB Garamond';
+}
+div{
+    margin: auto;
+}
+footer{
+    background-color: #660708;
+    color: #D3D3D3;
+    text-align: center;
+    font-size: x-large;
+    font-family: 'EB Garamond';
 }
