--- a/Chamber/styles/medium.css
+++ b/Chamber/styles/medium.css
@@ -7,8 +7,9 @@
     header img{
         grid-column: 1;
         grid-row: 1/3;
-        height: 90%;
-        justify-self: center;
+        height: 70%;
+        margin-left: auto;
+        padding-right: 20px;
     }
     header h1{
         grid-column: 1/4;
@@ -27,5 +28,21 @@
     header a{
         padding: 0px;
         margin: 0px;
+    }
+    main{
+    grid-template-rows: 1fr 80px 1fr 1fr 1fr 5px;
+    }
+    main img{
+        height: 100%;
+    }
+    .signs{
+        grid-column: 1/7;
+    }
+    .roofing{
+        grid-column: 7/13;
+    }
+    .land{
+        grid-column: 1/13;
+        grid-row: 5;
     }
 }
