--- a/Chamber/styles/medium.css
+++ b/Chamber/styles/medium.css
@@ -56,14 +56,14 @@
         grid-row: 1;
     }
     header nav{
-        display: flex;
-        flex-direction: column;
         margin: 0px;
+        width: 100%;
     }
     header a{
         padding:5px;
         margin: 0px;
         text-align: center;
+        border-radius: 0px;
     }
     main{
         grid-template-rows: 1fr 80px 1fr 1fr 1fr 1fr 1fr 1fr 5px;
