--- a/Chamber/styles/medium.css
+++ b/Chamber/styles/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 641px) and (max-width: 1007px){
+@media only screen and (min-width: 641px) and (max-width: 1300px){
     header{
         display: grid;
         grid-template-columns: repeat(3,1fr);
@@ -22,6 +22,8 @@
         grid-column: 2/3;
         text-align: center;
         margin: 0px;
+    }
+    .link{
         display: flex;
         flex-direction: column;
     }
