--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -54,6 +54,7 @@ main img{
     grid-template-columns: 1fr;
     grid-template-rows: 80px 1fr 1fr;
     text-align: center;
+    font-size: 30px;
 }
 
 .cards h2{
@@ -74,6 +75,7 @@ main img{
     grid-template-rows: 80px 1fr 1fr;
     background-color: #D3D3D3;
     text-align: center;
+    font-size: 30px;
 }
 .card1 h2{
     text-align: center;
