--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -171,3 +171,37 @@ footer{
     font-size: x-large;
     font-family: 'EB Garamond';
 }
+.background-box{
+    margin-left: 100px;
+    margin-top: inherit;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.toggle-box{
+    width: 70px;
+    height: 30px;
+    display: block;
+    background-color: #000;
+    margin-bottom: 5px;
+    border-radius: 100000px;
+    cursor: pointer;
+    position: relative;
+}
+input[type="checkbox"]{
+    display: none;
+}
+.circle{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 0px;
+    background-color: #fff;
+    border-radius: 1000px;
+    margin: 4.5px;
+    transition: 0.5s;
+}
+.dark-mode body {
+    background-color: #000;
+    color: #fff;
+}
