--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -187,6 +187,7 @@ footer{
     border-radius: 100000px;
     cursor: pointer;
     position: relative;
+    transition: 0.5s;
 }
 input[type="checkbox"]{
     display: none;
@@ -201,7 +202,73 @@ input[type="checkbox"]{
     margin: 4.5px;
     transition: 0.5s;
 }
-.dark-mode body {
+
+.dark-mode{
     background-color: #000;
     color: #fff;
+    header a:hover{
+        background-color: #fff;
+        color: #000;
+    }
+    .cards{
+        border: 3px solid #fff;
+    }
+    .card1{
+        border: 3px solid #fff;
+    }
+    .cards h2{
+        background-color: #000;
+        color: #fff;
+        text-decoration: underline 2px solid #fff;
+    }
+    .card1 h2{
+        background-color: #000;
+        color: #fff;
+        text-decoration: underline 2px solid #fff;
+    }
+    .signs{
+        background-color: #000;
+        color: #fff;
+        border: 3px solid #fff;
+        
+    }
+    .signs h2{
+        background-color: #000;
+        color: #fff;
+        text-decoration: underline 2px solid #fff;
+    }
+    .signs p{
+        color: #fff;
+    }
+    .land{
+        background-color: #000;
+        color: #fff;
+        border: 3px solid #fff;
+    }
+    .land h2{
+        background-color: #000;
+        color: #fff;
+        text-decoration: underline 2px solid #fff;
+    }
+    .land p{
+        color: #fff;
+    }
+    .roofing{
+        background-color: #000;
+        color: #fff;
+        border: 3px solid #fff;
+    }
+    .roofing h2{
+        background-color: #000;
+        color: #fff;
+        text-decoration: underline 2px solid #fff;
+    }
+    .roofing p{
+        color: #fff;
+    }
+    footer{
+        background-color: #000;
+        color: #fff;
+        border: 3px solid #fff;
+    }
 }
