--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -47,6 +47,13 @@
         grid-column: 1/13;
         grid-row: 5;
     }
+    .background-box{
+       grid-column: 3;
+       grid-row: 1;
+       display: flex;
+       justify-content: end;
+       margin-right: inherit;
+    }
 }
 @media only screen and (min-width:200px) and (max-width:641px){
     header{
@@ -56,6 +63,10 @@
     }
     header img{
         grid-row: 1;
+        display: flex;
+    }
+    header h1{
+        grid-row: 2;
     }
     header nav{
         margin: 0px;
@@ -93,6 +104,7 @@
         grid-row: 8;
     }
     #menu{
+        grid-row: 3;
         display: block;
         font-size: 2rem;
         font-weight: 700;
@@ -122,4 +134,10 @@
     #menu.show::before{
         content: "Ⅹ";
     }
+    .background-box{
+        grid-row: 1;
+        display: flex;
+        justify-content: end;
+        margin-right: inherit;
+     }
 } 
