--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -34,9 +34,9 @@
     main{
     grid-template-rows: 1fr 80px 1fr 1fr 1fr 5px;
     }
-    main img{
+    /* main img{
         height: 100%;
-    }
+    } */
     .signs{
         grid-column: 1/7;
     }
