--- a/styles/larger.css
+++ b/styles/larger.css
@@ -58,5 +58,32 @@
 @media only screen and (min-width:100px) and (max-width: 600px){
     .temples{
         max-height: 150px;
+        grid-row: 1;
+    }
+    main{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4,auto);
+        grid-gap: 20px;
+    }
+    main h2{
+        grid-row: 2;
+    }
+    .card{
+        grid-column: 1;
+        grid-row: 3;
+        justify-self: center;
+        width: 600px;
+        margin: auto;
+
+    }
+    .cards{
+        grid-column: 1;
+        grid-row: 4;
+        justify-self: center;
+        width: 600px;
+    }
+    .map{
+        margin: auto;
     }
 }
