--- a/styles/larger.css
+++ b/styles/larger.css
@@ -49,7 +49,7 @@
 
 @media only screen and (max-width: 960px){
     .temples{
-        max-height: 300px;
+        max-height: auto;
     }
     .overlay{
         font-size: larger;
@@ -57,7 +57,7 @@
 }
 @media only screen and (min-width:100px) and (max-width: 600px){
     .temples{
-        max-height: 150px;
+        max-height: auto;
         grid-row: 1;
     }
     main{
