--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -116,9 +116,6 @@
     .d1{
         font-size: larger;
     }
-    .civic img:hover{
-        border-radius: 0px 0px;
-    }
     .sidebar h1{
         font-size: x-large;
     }
@@ -211,4 +208,52 @@
        margin: 0px;
        right: 0;
      }
+     .sidebar{
+        grid-column: 1/13;
+        margin-top: 30px;
+        grid-row: 1/4;
+     }
+     .chamber1{
+        width: 100%;
+        height: fit-content;
+     }
+     .container1{
+        position: relative;
+     }
+     .display{
+        position: relative;
+        top: none;
+        display: contents;
+     }
+     .discover-main{
+        display: grid;
+        grid-template-columns: 1;
+        grid-template-rows: repeat(10,auto);
+     }
+     .visits{
+        padding: 25px;
+     }
+
+     /*fix as you go*/
+     .main-photos{
+        grid-column: 1/13;
+        grid-row:4/10;
+        color: #000;
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+    }
+    .d1{
+        margin-bottom: 30px;
+    }
+    .civic img:hover{
+        border-radius: 0px 0px ;
+    }
+    .fort img:hover{
+        border-radius: 0px 0px;
+    }
+    .statesville-pic{
+        width: 50%;
+    }
+    
 } 
