--- a/styles/larger.css
+++ b/styles/larger.css
@@ -56,34 +56,21 @@
     }
 }
 @media only screen and (min-width:100px) and (max-width: 600px){
-    .temples{
-        max-height: auto;
-        grid-row: 1;
-    }
     main{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4,auto);
-        grid-gap: 20px;
-    }
-    main h2{
-        grid-row: 2;
-    }
-    .card{
-        grid-column: 1;
-        grid-row: 3;
-        justify-self: center;
-        width: 600px;
-        margin: auto;
-
+        grid-gap: 0px;
     }
     .cards{
-        grid-column: 1;
-        grid-row: 4;
-        justify-self: center;
-        width: 600px;
+        grid-row: 5;
+        margin: auto;
+        width: 100%;
+        margin-top: 30px;
     }
-    .map{
+    .card{
+        display: flex;
+        flex-direction: column;
         margin: auto;
     }
 }
