--- a/styles/form.css
+++ b/styles/form.css
@@ -1,51 +1,73 @@
-.form-box{
+:root {
+    --form-background-color: #FEFAE0;
+    --form-heading-background-color: #283618;
+    --form-heading-color: white;
+  }
+  
+  .form-box {
     grid-column: 1 / 3;
     height: 800px;
     width: 500px;
-}
-form{
+  }
+  
+  form {
     height: 80%;
-}
-fieldset{
+  }
+  
+  fieldset {
     height: 100%;
     margin-top: 30px;
     border: 3px solid black;
-    padding: 0px;
-    background-color:#FEFAE0 ;
-}
-fieldset p{
-    background-color: #283618;
+    padding: 0;
+    background-color: var(--form-background-color);
+  }
+  
+  fieldset p {
+    background-color: var(--form-heading-background-color);
     width: 100%;
     margin-block-start: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
-    color: white;
+    color: var(--form-heading-color);
     font-size: xx-large;
-}
-.username{
+  }
+  
+  .username {
     margin-top: 10px;
-}
-fieldset label{
+  }
+  
+  fieldset label {
     display: flex;
     flex-direction: column;
     align-items: baseline;
     margin-top: 30px;
-}
-fieldset label input{
+  }
+  
+  fieldset label input {
     margin-left: 5px;
     height: 44px;
     width: 96%;
-}
-#rangvalue{
+  }
+  
+  #rangvalue {
     margin: 2px;
-}
-.submit{
+  }
+  
+  .submit {
     margin: 5px;
     display: flex;
     height: 44px;
     width: 100px;
-}
-
-
+  }
+  
+  #rangevalues {
+    display: flex;
+  }
+  
+  #rangevalues option {
+    width: 100%;
+    margin-right: 11px;
+  }
+  
