--- a/styles/form.css
+++ b/styles/form.css
@@ -1,3 +1,10 @@
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+
 :root {
     --form-background-color: #FEFAE0;
     --form-heading-background-color: #283618;
@@ -76,6 +83,11 @@
   .container2{
     position: relative;
   }
+.thanks{
+    font-size: xxx-large;
+    color: white;
+    padding: 100px;
+}
 
   
 
